add_subdirectory(StreamingMandelbrot)
add_subdirectory(CurveStreaming)
add_subdirectory(CurveStyles)
add_subdirectory(HistogramStyles)
add_subdirectory(BarChart)
add_subdirectory(PieChart)
add_subdirectory(VStack)
add_subdirectory(CurveStreaming2)
add_subdirectory(SceneModel)
add_subdirectory(StyleSheet)
add_subdirectory(Scatter)
add_subdirectory(Quivers)
add_subdirectory(Axes)
add_subdirectory(HeavyCurveStreaming)
add_subdirectory(PolarGauge)
